Resolves: tdf#119607 crash in calling getPropertyState on TextParagraph

Change-Id: Ib7091473e3547241e95dc3d3921abf650f288aff
Reviewed-on: https://gerrit.libreoffice.org/59825
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>